--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,9 +35,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-    access_control:
-        - { path: ^/users, roles: ROLE_ADMIN }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/users, roles: ROLE_USER }
 
     role_hierarchy:
         ROLE_EDITOR: ROLE_USER
