--- a/.env
+++ b/.env
@@ -36,17 +36,17 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/normnprod?serverVersion=mariadb-10.4.1
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://normandprod14:jaohvjsywtfogaoa@localhost?encryption=tls&auth_mode=oauth
+MAILER_URL=gmail://
 ###< symfony/swiftmailer-bundle ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://normandprod14:jaohvjsywtfogaoa@default
+MAILER_DSN=gmail://
 ###< symfony/google-mailer ###
 
 ###> google/recaptcha ###
 # To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
 # https://www.google.com/recaptcha/admin
-GOOGLE_RECAPTCHA_SITE_KEY='6LcshMEZAAAAANLhJ2kNumlR88lchP5O3dgSVPhc'
-GOOGLE_RECAPTCHA_SECRET='6LcshMEZAAAAAFkC8QYYWKn3zA0WjRx0tFwnwo2p'
+GOOGLE_RECAPTCHA_SITE_KEY=''
+GOOGLE_RECAPTCHA_SECRET=''
 ###< google/recaptcha ###
